--- a/index.html
+++ b/index.html
@@ -15,41 +15,37 @@
 
 <table>
 <tr>
-<td div id="table01">Pannenkoek</td>
-<td div id="table02"><img src="img\spelt-pannenkoeken-recept.jpg" width="100%" height="100%" alt="Pannenkoek" title="Pannenkoek"></td>
-<td div id="table03">Schroevendraaier</td>
-<td div id="table04"><img src="img\schroevendraaier.jpg" width="100%" height="100%" alt="schroevendraaier" title="schroevendraaier"></td>
-</div>
+<td id="table01">Pannenkoek</td>
+<td id="table02"><img src="img/spelt-pannenkoeken-recept.jpg" height="180" alt="Pannenkoek" title="Pannenkoek"></td>
+<td id="table03">Schroevendraaier</td>
+<td id="table04"><img src="img/schroevendraaier.jpg" height="180" alt="schroevendraaier" title="schroevendraaier"></td>
 </tr>
 </table>
 
 <table>
 <tr>
-<td div id="table05">Krant</td>
-<td div id="table06"><img src="img\krant.jpg" width="100%" height="100%" alt="krant" title="krant"></td>
-<td div id="table07">Worstenbroodje</td>
-<td div id="table08"><img src="img\worstenbroodje.jpg" width="100%" height="100%" alt="worstenbroodje" title="worstenbroodje"></td>
-</div>
+<td id="table05">Krant</td>
+<td id="table06"><img src="img/krant.jpg" height="180" alt="krant" title="krant"></td>
+<td id="table07">Worstenbroodje</td>
+<td id="table08"><img src="img/worstenbroodje.jpg" height="180" alt="worstenbroodje" title="worstenbroodje"></td>
 </tr>
 </table>
 
 <table>
 <tr>
-<td div id="table09">Taart</td>
-<td div id="table10"><img src="img\taart.jpg" width="100%" height="100%" alt="taart" title="taart"></td>
-<td div id="table11">Clownsneus</td>
-<td div id="table12"><img src="img\clown.jpeg" width="100%" height="100%" alt="clown" title="clown"></td>
-</div>
+<td id="table09">Taart</td>
+<td id="table10"><img src="img/taart.jpg" height="180" alt="taart" title="taart"></td>
+<td id="table11">Clownsneus</td>
+<td id="table12"><img src="img/clown.jpeg" height="180" alt="clown" title="clown"></td>
 </tr>
 </table>
 
 <table>
 <tr>
-<td div id="table13">Geluksgetal</td>
-<td div id="table14"><img src="img\lucky13.jpg" width="100%" height="100%" alt="lucky13" title="lucky13"></td>
-<td div id="table15">Emmer</td>
-<td div id="table16"><img src="img\emmer.jpg" width="100%" height="100%" alt="emmer" title="emmer"></td>
-</div>
+<td id="table13">Geluksgetal</td>
+<td id="table14"><img src="img/lucky13.jpg" height="180" alt="lucky13" title="lucky13"></td>
+<td id="table15">Emmer</td>
+<td id="table16"><img src="img/emmer.jpg" height="180" alt="emmer" title="emmer"></td>
 </tr>
 </table>
 
