--- a/index.html
+++ b/index.html
@@ -9,43 +9,42 @@
 </head>
 <body>
     <div id="header"></div>
-    
 <div id="h1"><h1>12.14 Huiswerk</h1></div>
 <br>
 
 <table>
 <tr>
-<td id="table01">Pannenkoek</td>
-<td id="table02"><img src="img/spelt-pannenkoeken-recept.jpg" height="180" alt="Pannenkoek" title="Pannenkoek"></td>
-<td id="table03">Schroevendraaier</td>
-<td id="table04"><img src="img/schroevendraaier.jpg" height="180" alt="schroevendraaier" title="schroevendraaier"></td>
+    <td id="cel_01">Pannenkoek</td>
+    <td id="cel_02"><img src="img/spelt-pannenkoeken-recept.jpg" height="180" alt="Pannenkoek" title="Pannenkoek"></td>
+    <td id="cel_03">Schroevendraaier</td>
+    <td id="cel_04"><img src="img/schroevendraaier.jpg" height="180" alt="schroevendraaier" title="schroevendraaier"></td>
 </tr>
 </table>
 
 <table>
 <tr>
-<td id="table05">Krant</td>
-<td id="table06"><img src="img/krant.jpg" height="180" alt="krant" title="krant"></td>
-<td id="table07">Worstenbroodje</td>
-<td id="table08"><img src="img/worstenbroodje.jpg" height="180" alt="worstenbroodje" title="worstenbroodje"></td>
+    <td id="cel_05">Krant</td>
+    <td id="cel_06"><img src="img/krant.jpg" height="180" alt="krant" title="krant"></td>
+    <td id="cel_07">Worstenbroodje</td>
+    <td id="cel_08"><img src="img/worstenbroodje.jpg" height="180" alt="worstenbroodje" title="worstenbroodje"></td>
 </tr>
 </table>
 
 <table>
 <tr>
-<td id="table09">Taart</td>
-<td id="table10"><img src="img/taart.jpg" height="180" alt="taart" title="taart"></td>
-<td id="table11">Clownsneus</td>
-<td id="table12"><img src="img/clown.jpeg" height="180" alt="clown" title="clown"></td>
+    <td id="cel_09">Taart</td>
+    <td id="cel_10"><img src="img/taart.jpg" height="180" alt="taart" title="taart"></td>
+    <td id="cel_11">Clownsneus</td>
+    <td id="cel_12"><img src="img/clown.jpeg" height="180" alt="clown" title="clown"></td>
 </tr>
 </table>
 
 <table>
 <tr>
-<td id="table13">Geluksgetal</td>
-<td id="table14"><img src="img/lucky13.jpg" height="180" alt="lucky13" title="lucky13"></td>
-<td id="table15">Emmer</td>
-<td id="table16"><img src="img/emmer.jpg" height="180" alt="emmer" title="emmer"></td>
+    <td id="cel_13">Geluksgetal</td>
+    <td id="cel_14"><img src="img/lucky13.jpg" height="180" alt="lucky13" title="lucky13"></td>
+    <td id="cel_15">Emmer</td>
+    <td id="cel_16"><img src="img/emmer.jpg" height="180" alt="emmer" title="emmer"></td>
 </tr>
 </table>
 
